fixed bug with roombas getting stuck on boundaries

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,7 @@
   height: 300px;
   width: 320px;
 }
+
+canvas {
+  border: 2px solid grey;
+}
